<resources>
    <string name="app_name">HangoutPartner</string>

    <string name="action_login"> Login</string>
    <string name="action_event_browse">Browse Events</string>
    <string name="action_event_create">Create Events</string>

    <string name="action_account">Account</string>
    <string name="action_message">Message</string>
    <string name="action_settings">Setting</string>
    <string name="action_logout">Logout</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_event_browse">EventBrowse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dialog_message_delete">Confirm to delete this event</string>
    <string name="dialog_title_delete">Confirmation</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="upload_image">Upload an image</string>
    <string name="upload_video">Upload a video</string>
    <string name="refreshing">Refreshing</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_profile_browse">ProfileBrowseActivity</string>
    <string name="title_activity_login_email">Returned user login</string>
    <string name="title_activity_email_register">New User</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Use previous registered email/password to login.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (At least 7 characters)</string>
    <string name="prompt_password_confirm">Confirm Password again</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_confirm">Password inconsistent. Check again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_taken">This email address is taken already</string>
    <string name="error_others">Internal Error. Try again later.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
